--- a/css/index.css
+++ b/css/index.css
@@ -20,6 +20,13 @@
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
 
+@font-face {
+    font-family: 'champlimou';
+    src:url('../fonts/Champagne_Limousines/Champagne_Limousines.ttf.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
