--- a/css/style.css
+++ b/css/style.css
@@ -121,3 +121,38 @@ h1 {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
 }
+
+
+
+/***************\
+IHM
+\***************/
+
+.header{
+    position: absolute;
+    top: 0; left: 0; right: 0;
+    height: 60px; line-height: 60px;
+    color: #FFF;
+    text-transform: uppercase;
+    text-align: center;
+    background-color: #FF98E5;
+    font-weight: bold;
+}
+
+.nav{
+    position: absolute;
+    bottom: 0; left: 0; right: 0;
+    height: 60px; line-height: 60px;
+    text-align: center;
+    background-color: #C6C6C6;
+}
+
+.nav a{
+    display: block;
+    width: 33%;
+    float: left;
+    box-sizing:border-box; /*debug*/
+    border: 1px solid black; /*debug*/
+}
+.nav a #camera{ width: 34%; } /*central*/
+
