--- a/css/style.css
+++ b/css/style.css
@@ -151,8 +151,13 @@ IHM
     display: block;
     width: 33%;
     float: left;
-    box-sizing:border-box; /*debug*/
-    border: 1px solid black; /*debug*/
+    -webkit-box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    -ms-box-sizing:border-box;
+    box-sizing:border-box;
+    /*debug*/
+    border: 1px solid black;
+    /*debug*/
 }
 .nav a #camera{ width: 34%; } /*central*/
 
